--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -48,9 +48,14 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Classic'
 
+#exec-once = bash -c "tail -f /tmp/wobpipe | wob"
+#exec-once = bash -c "sleep 1 && hyprctl dispatch exec 'tail -f /tmp/wobpipe | wob'"
+exec-once = ~/.config/hypr/scripts/wob.sh
+
+
 exec-once = firefox & amberol & discord
 
-exec-once = hyprctl dispatch workspace 1
+#exec-once = systemctl start systemd-sysctl.service
 
 
 #############################
@@ -304,8 +309,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && pamixer --get-volume > /tmp/wobpipe
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && pamixer --get-volume > /tmp/wobpipe
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
@@ -343,11 +348,13 @@ windowrule = workspace 3, class:firefox
 windowrule = float, title:Amberol
 windowrule = float, class:discord
 windowrule = float, class:discord-stable
+windowrule = float, title:Volume Control
 
 windowrule = size 20 20, title:Amberol
 windowrule = move 88% 40%, title:Amberol
 windowrule = move 5% 10%, class:discord
 windowrule = move 5% 10%, class:discord-stable
+windowrule = move 50% 6%, title:Volume Control
 
 workspace = 1, monitor:DP-2, default:true, defaultName:Bridge
 workspace = 2, defaultName:Comms
