--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -251,13 +251,16 @@ bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 
+#bind = $mainMod, M, exec, killall waybar && waybar
+
+
 bind = $mainMod, R, exec, sudo systemctl restart display-manager
 
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
-#bind = $mainMod, M, exit,
+bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bindr = $mainMod, SUPER_L, exec, $menu
@@ -349,12 +352,14 @@ windowrule = float, title:Amberol
 windowrule = float, class:discord
 windowrule = float, class:discord-stable
 windowrule = float, title:Volume Control
+windowrule = float, title:python # for sound control program
 
 windowrule = size 20 20, title:Amberol
 windowrule = move 88% 40%, title:Amberol
 windowrule = move 5% 10%, class:discord
 windowrule = move 5% 10%, class:discord-stable
 windowrule = move 50% 6%, title:Volume Control
+windowrule = move 52% 5%, title:python
 
 workspace = 1, monitor:DP-2, default:true, defaultName:Bridge
 workspace = 2, defaultName:Comms
