--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -15,8 +15,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=DP-2, 1920x1080@144, 0x0, auto, vrr, 2
-#vrr=1
+monitor=eDP-1, 1920x1080@60, 0x0, 1, vrr, 0
 
 ###################
 ### MY PROGRAMS ###
@@ -39,11 +38,11 @@ $menu = pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper ## & firefox
+exec-once = waybar -c ~/.config/waybar/config1 -s ~/.config/waybar/style1.css & hyprpaper ## & firefox
 
 exec-once = ~/.config/eww/scripts/start.sh
 
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Classic'
@@ -57,6 +56,8 @@ exec-once = firefox & amberol & discord
 
 #exec-once = systemctl start systemd-sysctl.service
 
+exec-once = elephant
+exec-once = walker --gapplication-service
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -69,6 +70,8 @@ env = XCURSOR_THEME,Bibata-Modern-Classic
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = QT_QPA_PLATFORM,wayland
 
 
 ###################
@@ -204,10 +207,10 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = de
+    kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = compose:rctrl
     kb_rules =
 
     numlock_by_default = true
@@ -217,7 +220,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -264,6 +267,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bindr = $mainMod, SUPER_L, exec, $menu
+bind = $mainMod, W, exec, walker
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
