made the split waybar the default config and split the config for two device types

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ $menu = pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar -c ~/.config/waybar/config1 -s ~/.config/waybar/style1.css & hyprpaper ## & firefox
+exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css & hyprpaper ## & firefox
 
 exec-once = ~/.config/eww/scripts/start.sh
 
