changed appmenu keybinds, added walker configs which adhere to the theme

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ $menu = pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css & hyprpaper ## & firefox
+exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style-lt.css & hyprpaper ## & firefox
 
 exec-once = ~/.config/eww/scripts/start.sh
 
@@ -52,7 +52,9 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Moder
 exec-once = ~/.config/hypr/scripts/wob.sh
 
 
-exec-once = firefox & amberol & discord
+exec-once = [workspace 3 silent] firefox
+exec-once = [workspace 2 silent] amberol
+exec-once = [workspace 2 silent] discord
 
 #exec-once = systemctl start systemd-sysctl.service
 
@@ -266,7 +268,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bindr = $mainMod, SUPER_L, exec, $menu
+bind = $mainMod, D, exec, $menu
 bind = $mainMod, W, exec, walker
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
