cleaned up the autostart part of hyprland config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -33,33 +33,26 @@ $menu = pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style-lt.css & hyprpaper ## & firefox
-
-exec-once = ~/.config/eww/scripts/start.sh
-
+# start necessary processes
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+
+exec-once = hyprpaper
+exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style-lt.css
+exec-once = ~/.config/eww/scripts/start.sh
+exec-once = ~/.config/hypr/scripts/wob.sh
+
+exec-once = elephant
+exec-once = walker --gapplication-service
 
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Classic'
 
-#exec-once = bash -c "tail -f /tmp/wobpipe | wob"
-#exec-once = bash -c "sleep 1 && hyprctl dispatch exec 'tail -f /tmp/wobpipe | wob'"
-exec-once = ~/.config/hypr/scripts/wob.sh
 
-
+# start workspace layout specific programs (might not stay)
 exec-once = [workspace 3 silent] firefox
 exec-once = [workspace 2 silent] amberol
 exec-once = [workspace 2 silent] discord
 
-#exec-once = systemctl start systemd-sysctl.service
-
-exec-once = elephant
-exec-once = walker --gapplication-service
 
 #############################
 ### ENVIRONMENT VARIABLES ###
