--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -49,7 +49,7 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Moder
 
 
 # start workspace layout specific programs (might not stay)
-exec-once = [workspace 3 silent] firefox
+exec-once = [workspace 3 silent] zen-browser #firefox
 exec-once = [workspace 2 silent] amberol
 exec-once = [workspace 2 silent] discord
 
@@ -313,6 +313,9 @@ bindm = $mainMod, mouse:273, resizewindow
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && pamixer --get-volume > /tmp/wobpipe
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && pamixer --get-volume > /tmp/wobpipe
+#bindel = SHIFT,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+ && pamixer --get-volume > /tmp/wobpipe
+#bindel = SHIFT,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%- && pamixer --get-volume > /tmp/wobpipe
+
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
@@ -345,7 +348,7 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrule = workspace 2, class:discord
 windowrule = workspace 2, class:discord-stable
 windowrule = workspace 2, title:Amberol
-windowrule = workspace 3, class:firefox
+windowrule = workspace 3, silent, class:zen-browser #firefox
 
 windowrule = float, title:Amberol
 windowrule = float, class:discord
@@ -364,5 +367,5 @@ workspace = 1, monitor:DP-2, default:true, defaultName:Bridge
 workspace = 2, defaultName:Comms
 workspace = 3, defaultName:Scanner
 
-workspace = 3, on-created-empty:firefox
+workspace = 3, on-created-empty:zen-browser #firefox
 workspace = 2, on-created-empty:discord & amberol
