workspace name adjusments

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -348,7 +348,7 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrule = workspace 2, class:discord
 windowrule = workspace 2, class:discord-stable
 windowrule = workspace 2, title:Amberol
-windowrule = workspace 3, silent, class:zen-browser #firefox
+windowrule = workspace 3, class:zen-browser #firefox
 
 windowrule = float, title:Amberol
 windowrule = float, class:discord
@@ -363,9 +363,13 @@ windowrule = move 5% 10%, class:discord-stable
 windowrule = move 50% 6%, title:Volume Control
 windowrule = move 52% 5%, title:python
 
-workspace = 1, monitor:DP-2, default:true, defaultName:Bridge
+workspace = 1, monitor:DP-2, default:true, defaultName:Den_01
+workspace = 4, defaultName:Den_02
+workspace = 5, defaultName:Den_03
+workspace = 6, defaultName:Den_04
+
 workspace = 2, defaultName:Comms
-workspace = 3, defaultName:Scanner
+workspace = 3, defaultName:Prowl
 
 workspace = 3, on-created-empty:zen-browser #firefox
 workspace = 2, on-created-empty:discord & amberol
