added hyprlock keybind and dependency

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -259,12 +259,14 @@ bind = $mainMod, R, exec, sudo systemctl restart display-manager
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, W, exec, walker
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
