slight dunst size adjustments and workspace layout changes

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -49,9 +49,8 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Moder
 
 
 # start workspace layout specific programs (might not stay)
-exec-once = [workspace 3 silent] zen-browser #firefox
-exec-once = [workspace 2 silent] amberol
-exec-once = [workspace 2 silent] discord
+exec-once = [workspace name:Comms silent] amberol
+exec-once = [workspace name:Comms silent] discord
 
 
 #############################
@@ -262,7 +261,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, $menu
+# bind = $mainMod, D, exec, $menu
 bind = $mainMod, W, exec, walker
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -285,6 +284,8 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+bind = $mainMod, D, workspace, name:Comms
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -347,9 +348,9 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 # to find class names: xprop | grep WM_CLASS | awk '{ print $4 }' then click on the window
 # LUMI
-windowrule = workspace 2, class:discord
-windowrule = workspace 2, class:discord-stable
-windowrule = workspace 2, title:Amberol
+windowrule = workspace name:Comms, class:discord
+windowrule = workspace name:Comms, class:discord-stable
+windowrule = workspace name:Comms, title:Amberol
 windowrule = workspace 3, class:zen-browser #firefox
 
 windowrule = float, title:Amberol
@@ -365,13 +366,15 @@ windowrule = move 5% 10%, class:discord-stable
 windowrule = move 50% 6%, title:Volume Control
 windowrule = move 52% 5%, title:python
 
-workspace = 1, monitor:DP-2, default:true, defaultName:Den_01
-workspace = 4, defaultName:Den_02
-workspace = 5, defaultName:Den_03
-workspace = 6, defaultName:Den_04
+workspace = 1, defaultName:Den_01
+workspace = 2, defaultName:Den_02
+workspace = 3, defaultName:Den_03
+workspace = 4, defaultName:Den_04
+workspace = 5, defaultName:Den_05
+workspace = 6, defaultName:Den_06
+workspace = 7, defaultName:Den_07
+workspace = 8, defaultName:Den_08
+workspace = 9, defaultName:Den_09
+workspace = 10, defaultName:Den_10
 
-workspace = 2, defaultName:Comms
-workspace = 3, defaultName:Prowl
-
-workspace = 3, on-created-empty:zen-browser #firefox
-workspace = 2, on-created-empty:discord & amberol
+workspace = name:Comms, on-created-empty:discord & amberol
