--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -26,8 +26,16 @@ monitor=eDP-1, 1920x1080@60, 0x0, 1, vrr, 0
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
+$menu = walker # pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
+$browser = zen-browser
 
+######################
+### QUICK SETTINGS ###
+######################
+
+$kb_layout = us
+$special_ws_key = grave
+$waybar_style = style-lt.css
 
 #################
 ### AUTOSTART ###
@@ -37,7 +45,7 @@ $menu = pgrep wofi >/dev/null 2>&1 && killall wofi || wofi --show drun
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = hyprpaper
-exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style-lt.css
+exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/$waybar_style
 exec-once = ~/.config/eww/scripts/start.sh
 exec-once = ~/.config/hypr/scripts/wob.sh
 
@@ -201,7 +209,7 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = $kb_layout
     kb_variant =
     kb_model =
     kb_options = compose:rctrl
@@ -261,11 +269,11 @@ bind = $mainMod, M, exit,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-# bind = $mainMod, D, exec, $menu
-bind = $mainMod, W, exec, walker
+bind = $mainMod, W, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
+bind = $mainMod, B, exec, $browser
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -285,7 +293,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-bind = $mainMod, D, workspace, name:Comms
+bind = $mainMod, $special_ws_key, workspace, name:Comms
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
